fixed padding issue on small screen sizes; gave a light grey background color on small screen sized for clarity

--- a/css/responsive_styles.css
+++ b/css/responsive_styles.css
@@ -133,13 +133,15 @@ input:focus {
 	}
 	
 	/*** Classes ***/
-	.player-name-field, #add-player-div {
+	.player-name-field {
 		width: 90%;
 	}
 	
 	.player-box {
 		width: 100%;
-		margin: 0 1em;
+		margin: 0 0 3em;
+        padding: 0 .75em;
+        background-color: #f6f6f6;
 	}
 	
 	/*** IDs ***/
